--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* Estiliza o corpo da página */
 body {
   font-family: "Chakra Petch", sans-serif; /* Define a fonte padrão */
-  background-color: #dddddd; /* Cor de fundo da página */
+  background-color: #F3E9DD; /* Cor de fundo da página */
   display: flex; /* Usa Flexbox para layout */
   flex-direction: column; /* Alinha os itens na vertical */
   align-items: center; /* Centraliza os itens horizontalmente */
@@ -17,7 +17,7 @@ body {
 /* Estiliza os títulos h1 */
 h1 {
   font-size: 2.5rem; /* Tamanho da fonte */
-  color: #222831; /* Cor do texto */
+  color: #4c2b08; /* Cor do texto */
   text-align: center; /* Alinha o texto ao centro */
   letter-spacing: 0.4rem; /* Espaçamento entre letras */
 }
@@ -37,9 +37,10 @@ section input {
   padding: 1rem; /* Espaçamento interno */
   border-radius: 1.5rem; /* Borda arredondada */
   margin-bottom: 1rem; /* Espaçamento abaixo dos inputs */
-  color: #45474b; /* Cor do texto */
+  color: #6D3914; /* Cor do texto */
   font-size: 1rem; /* Tamanho da fonte */
   box-sizing: border-box; /* Inclui padding e border na largura total */
+  
 }
 
 /* Estiliza os botões dentro das seções */
@@ -47,17 +48,18 @@ section button {
   padding: 0.8rem 1.2rem; /* Espaçamento interno do botão */
   border: none; /* Remove a borda padrão */
   border-radius: 1.5rem; /* Borda arredondada */
-  background-color: #30475e; /* Cor de fundo do botão */
-  color: #f5f7f8; /* Cor do texto do botão */
+  background-color: #4c2b08; /* Cor de fundo do botão */
+  color: #F3E9DD; /* Cor do texto do botão */
   font-size: 1rem; /* Tamanho da fonte */
   cursor: pointer; /* Muda o cursor para indicar que é clicável */
 }
 
 /* Adiciona efeito hover ao botão de pesquisa */
 section button:hover {
-  background-color: #30475e; /* Muda a cor de fundo ao passar o mouse */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra mais intensa */
+  background-color: #6D3914; /* Muda a cor de fundo ao passar o mouse */
+  box-shadow: 0 4px 8px rgba(54, 20, 1, 0.555); /* Adiciona uma sombra mais intensa */
 }
+
 
 /* Estiliza a caixa de resultados da pesquisa */
 .resultados-pesquisa {
@@ -75,7 +77,7 @@ section button:hover {
   border-radius: 0.6rem; /* Borda arredondada */
   padding: 1rem; /* Espaçamento interno */
   margin-bottom: 1rem; /* Espaçamento abaixo dos itens */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra leve */
+  box-shadow: 0 2px 4px rgba(54, 20, 1, 0.555); /* Sombra leve */
 }
 
 /* Estiliza os títulos dentro dos itens de resultado */
@@ -87,7 +89,7 @@ section button:hover {
 /* Estiliza os links dentro dos itens de resultado */
 .item-resultado a {
   text-decoration: none; /* Remove o sublinhado padrão dos links */
-  color: #30475e; /* Cor do texto dos links */
+  color: #4c2b08; /* Cor do texto dos links */
 }
 
 /* Estiliza os links quando são passados o mouse sobre */
