--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Importa a fonte Chakra Petch do Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 /* Estiliza o corpo da página */
@@ -196,17 +195,20 @@ footer {
   /* Cor do texto */
   text-align: center;
   /* Alinha o texto ao centro */
-  padding: 0.5rem;
+  padding: 1rem;
   /* Espaçamento interno */
   width: 100%;
   /* Largura total da página */
-  position: absolute;
+  position: fixed;
   /* Posiciona o rodapé */
   bottom: 0;
   /* Alinha ao fundo da página */
-  font-size: 1rem;
+  font-size: 1.1rem;
   /* Tamanho da fonte */
+  z-index: 10;
+
 }
+
 
 @media (max-width: 768px) {
   h1 {
