--- a/receita.style.css
+++ b/receita.style.css
@@ -58,8 +58,8 @@ img {
 
 .texto {
     width: 80%;
-    font-size: 1rem;
-    line-height: 1.5;
+    font-size: 15px;
+    line-height: 1.4;
     color: #612f00;
     margin: 0;
     padding: 15px;
@@ -111,7 +111,7 @@ footer {
 /* Responsividade para telas pequenas */
 @media (max-width: 480px) {
     .container {
-        width: 90%;      
+        width: 90%;
     }
 
     .intro {
@@ -121,7 +121,8 @@ footer {
 
     .texto {
         height: auto;
-        font-size: 0.875rem; /* Ajusta o tamanho da fonte */
+        font-size: 0.875rem;
+        /* Ajusta o tamanho da fonte */
     }
 
     .title {
@@ -136,17 +137,20 @@ footer {
     }
 
     .intro {
-        height: 180px; /* Ajusta a altura para telas médias */
+        height: 180px;
+        /* Ajusta a altura para telas médias */
     }
 
     img {
-        width: 35%; /* Ajusta a largura da imagem para telas médias */
+        width: 35%;
+        /* Ajusta a largura da imagem para telas médias */
     }
 
     .texto {
-        font-size: 0.875rem !important; /* Ajusta o tamanho da fonte */
+        font-size: 0.875rem !important;
+        /* Ajusta o tamanho da fonte */
     }
-    
+
 
     .title {
         font-size: 1.6rem;
@@ -156,33 +160,43 @@ footer {
 /* Responsividade para telas grandes */
 @media (min-width: 1200px) {
     .container {
-        width: 40%; /* Ajusta a largura da caixa de conteúdo */
-        padding: 3rem; /* Aumenta o padding para telas maiores */
+        width: 40%;
+        /* Ajusta a largura da caixa de conteúdo */
+        padding: 3rem;
+        /* Aumenta o padding para telas maiores */
     }
 
     .intro {
-        height: 200px; /* Ajusta a altura para telas maiores */
-        gap: 30px; /* Aumenta o espaço entre a imagem e o texto */
+        height: 200px;
+        /* Ajusta a altura para telas maiores */
+        gap: 30px;
+        /* Aumenta o espaço entre a imagem e o texto */
     }
 
     img {
-        width: 30%; /* Ajusta a largura da imagem */
-        height: 200px; /* Ajusta a altura da imagem */
+        width: 30%;
+        /* Ajusta a largura da imagem */
+        height: 200px;
+        /* Ajusta a altura da imagem */
     }
 
     .texto {
-        font-size: 1.2rem; /* Aumenta o tamanho da fonte para o texto */
+        font-size: 1.2rem;
+        /* Aumenta o tamanho da fonte para o texto */
     }
 
     .title {
-        font-size: 2rem; /* Aumenta o tamanho da fonte para o título */
+        font-size: 2rem;
+        /* Aumenta o tamanho da fonte para o título */
     }
 
     h2 {
-        font-size: 24px; /* Aumenta o tamanho da fonte para os subtítulos */
+        font-size: 24px;
+        /* Aumenta o tamanho da fonte para os subtítulos */
     }
 
     footer {
-        font-size: 1.2rem; /* Aumenta o tamanho da fonte do rodapé */
+        font-size: 1.2rem;
+        /* Aumenta o tamanho da fonte do rodapé */
     }
 }
